2003-10-10 Jackson Harper <jackson@ximian.com>

	* get.c/get.h: Add methods to get stringified methodspecs and
	method type parameters. 
	
2003-10-09 Jackson Harper <jackson@ximian.com>

	* main.c/get.c: Remove magic numbers, use constants.
	
2003-10-08 Jackson Harper <jackson@ximian.com>

	* main.c (dis_genericparam): renamed to
	dis_generic_param_and_constraints, allow a table type to be passed
	to the method so this could be used with generic methods (It is
	not though).
	* get.c/get.h (get_generic_param): method to stringify generic
	type and method parameters.
	* get.c (dis_stringify_method_signature): Add generic parameters.
	
2003-10-08 Jackson Harper <jackson@ximian.com>

	* main.c (dis_type): NULL cnst_block so we dont explode on
	interfaces.
	* main.c (dis_genericparam): oops, fix off-by-one error.
	
2003-10-08 Jackson Harper <jackson@ximian.com>

	* get.c/get.h add method to get a methoddef from an index, simplify
	get_typd_or_methdef, use new get_methoddef to get the method
	because we have a method index not a method token.
	
2003-10-07 Jackson Harper <jackson@ximian.com>

	* main.c: When dis. generic parameters the TypeOrMethodDef token
	only needs to be shifted 1 bit. Added dis of generic constraints.
	* get.c/get.h: New method for getting a TypeOrMethodDef token
	* dump.c: When dumping generic parameters and generic constraints
	output readable names instead of just tokens.
	
2003-10-01 Jackson Harper <jackson@latitudegeo.com>
	
	* main.c: Fix visibility level names, when outputing pinvoke info
	quote the module and method names, properties have specialname,
	and rtspecialname flags	(nothing else), dis global methods and
	fields FIXME: indentation issues.
	* get.h: declare get_fieldref_signature
	* get.c: Fix unsigned ints (not uint), single quote argument names
	(this is kinda a hack, ildasm will only single quote arg names
	that are ilasm keywords), remove fixme, we know what typedbyref